# finite_state_machines

./: README.md  format-code.sh  pyproject.toml
examples/: ToyProblem.md  toy_problem.py
finite_state_machines/: __init__.py  fsm.py
tests/: test_fsm.py
